# ecom-cli

./: PyWhatKit_DB.txt  README.md  pyproject.toml
cli/: contacts-2025-01-27.csv  contacts-2025-01-29.csv  main.py  orders-ecom-2.xlsx  orders-ecom.xlsx  ~$orders-ecom-2.xlsx
cli/functions/: delivery.py  files.py  whatsapp.py
