[project]
name = "cli"
version = "0.1.0"
description = ""
authors = [
    {name = "JoCode-dev",email = "46027270+JoCode-dev@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "xlrd (>=2.0.1,<3.0.0)",
    "xlwt (>=1.3.0,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pywhatkit (>=5.4,<6.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ecom = "cli.main:cli"